# xpidump

./: .gitignore  Cargo.toml  Makefile  README.md
docs/: 10.bootstrap.js  237.bootstrap.js  README.md  bootstrap.js  index.html
src/: lib.rs  main.rs  wasm_bindings.rs  xpi.rs
src/xpi/: cose_ish.rs  manifest.rs  mod.rs  signatures.rs  xpi.rs
tests/: xpi_test.rs
tests/fixtures/: amo-localdev.xpi  amo_info-1.25.0.xpi  colorzilla-3.3.xpi  dev-new.xpi  dev-old-recommended.xpi  enterprise-dev.xpi  laboratory_by_mozilla-3.0.8.xpi  line-staging-cas-cur.xpi  remote-settings-devtools.xpi  webcompat.xpi
web/: index.html  index.js  package-lock.json  package.json  webpack.config.js
