[package]
name = "xpidump"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
cms = "0.2.3"
const-oid = "0.9.6"
json_comments = "0.2.2"
minicbor = { version = "0.21.0", features = ["half"] }
serde = "1.0.197"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.114"
wasm-bindgen = "0.2.92"
x509-cert = "0.2.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
