[package]
name = "xpidump"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "xpidump"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["clap"]

[dependencies]
clap = { version = "4.5.3", features = ["derive"], optional = true }
cms = "0.2.3"
const-oid = "0.9.6"
json_comments = "0.2.2"
minicbor = { version = "0.21.0", features = ["half"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
x509-cert = "0.2.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
serde-wasm-bindgen = "0.6.5"
